package br.com.fiap.space.domain.interfaces;

public interface Recarregavel {
    public void conectarBase();
}
